--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 @media  (max-width: 1440px) {
   body{
     background-image: url('images/pattern-background-mobile.svg');
+    background-position: center;
   }
 }
 
